Crashes when opening files. #94760

Closed
opened 2022-01-09 04:07:41 +01:00 by Nutthakit · 12 comments

System Information

Macbook M1 Pro

Blender version

3.1 Alpha

Short description of error

The program crashes when I try to open my design file. I check disable UI load and it doesn't work. sense_2_rrr.blend

**System Information** Macbook M1 Pro **Blender version** 3.1 Alpha **Short description of error** The program crashes when I try to open my design file. I check disable UI load and it doesn't work. [sense_2_rrr.blend](https://archive.blender.org/developer/F12796880/sense_2_rrr.blend)
Author

Added subscriber: @nutthakit8

Added subscriber: @nutthakit8
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Hi, thanks for the report. Your fie opens fine here on current master.
Please provide crash logs generated after the crash: https://docs.blender.org/manual/en/dev/troubleshooting/crash.html#crash-log

Is this also an issue on stable versions (3.0.0 or 2.93LTS)?

Hi, thanks for the report. Your fie opens fine here on current master. Please provide crash logs generated after the crash: https://docs.blender.org/manual/en/dev/troubleshooting/crash.html#crash-log Is this also an issue on stable versions (3.0.0 or 2.93LTS)?
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

@mano-wii , I'm not sure if this is just Mac thing. Can you open that file without a crash?

Operating system : Windows-10-10.0.18362-SP0 64 Bits
Graphics card : AMD Radeon(TM) 535 ATI Technologies .```
@mano-wii , I'm not sure if this is just Mac thing. Can you open that file without a crash? ```System Information Operating system : Windows-10-10.0.18362-SP0 64 Bits Graphics card : AMD Radeon(TM) 535 ATI Technologies .```

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

I can confirm on a RelWithDebInfo build, but not Debug.
Possibly this is a bug in the compiler.
The crash is at BM_mesh_bm_from_me.

___chkstk_darwin (@___chkstk_darwin:18)
bm_face_create_from_mpoly (/Users/germanocavalcante/blender-git/blender/source/blender/bmesh/intern/bmesh_mesh_convert.c:182)
BM_mesh_bm_from_me (/Users/germanocavalcante/blender-git/blender/source/blender/bmesh/intern/bmesh_mesh_convert.c:435)
BKE_mesh_to_bmesh_ex (/Users/germanocavalcante/blender-git/blender/source/blender/blenkernel/intern/mesh.cc:1166)
::BKE_mesh_to_bmesh(Mesh *, Object *, const bool, const BMeshCreateParams *) (/Users/germanocavalcante/blender-git/blender/source/blender/blenkernel/intern/mesh.cc:1181)
EDBM_mesh_make (/Users/germanocavalcante/blender-git/blender/source/blender/editors/mesh/editmesh_utils.c:288)
ED_object_editmode_enter_ex (/Users/germanocavalcante/blender-git/blender/source/blender/editors/object/object_edit.c:774)
ED_editors_init (/Users/germanocavalcante/blender-git/blender/source/blender/editors/util/ed_util.c:153)
wm_file_read_post (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:731)
WM_file_read (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:967)
wm_file_read_opwrap (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:2536)
wm_open_mainfile__open (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:2658)
wm_operator_invoke (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1313)
wm_operator_call_internal (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1554)
WM_operator_name_call_ptr (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1567)
ui_apply_but_funcs_after (/Users/germanocavalcante/blender-git/blender/source/blender/editors/interface/interface_handlers.c:1024)
ui_popup_handler (/Users/germanocavalcante/blender-git/blender/source/blender/editors/interface/interface_handlers.c:11482)
wm_handler_ui_call (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:688)
wm_handlers_do_intern (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3015)
wm_handlers_do (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3129)
wm_event_do_handlers (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3617)
WM_main (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm.c:639)
main (/Users/germanocavalcante/blender-git/blender/source/creator/creator.c:560)
start (@start:133)
I can confirm on a RelWithDebInfo build, but not Debug. Possibly this is a bug in the compiler. The crash is at `BM_mesh_bm_from_me`. ``` ___chkstk_darwin (@___chkstk_darwin:18) bm_face_create_from_mpoly (/Users/germanocavalcante/blender-git/blender/source/blender/bmesh/intern/bmesh_mesh_convert.c:182) BM_mesh_bm_from_me (/Users/germanocavalcante/blender-git/blender/source/blender/bmesh/intern/bmesh_mesh_convert.c:435) BKE_mesh_to_bmesh_ex (/Users/germanocavalcante/blender-git/blender/source/blender/blenkernel/intern/mesh.cc:1166) ::BKE_mesh_to_bmesh(Mesh *, Object *, const bool, const BMeshCreateParams *) (/Users/germanocavalcante/blender-git/blender/source/blender/blenkernel/intern/mesh.cc:1181) EDBM_mesh_make (/Users/germanocavalcante/blender-git/blender/source/blender/editors/mesh/editmesh_utils.c:288) ED_object_editmode_enter_ex (/Users/germanocavalcante/blender-git/blender/source/blender/editors/object/object_edit.c:774) ED_editors_init (/Users/germanocavalcante/blender-git/blender/source/blender/editors/util/ed_util.c:153) wm_file_read_post (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:731) WM_file_read (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:967) wm_file_read_opwrap (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:2536) wm_open_mainfile__open (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:2658) wm_operator_invoke (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1313) wm_operator_call_internal (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1554) WM_operator_name_call_ptr (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1567) ui_apply_but_funcs_after (/Users/germanocavalcante/blender-git/blender/source/blender/editors/interface/interface_handlers.c:1024) ui_popup_handler (/Users/germanocavalcante/blender-git/blender/source/blender/editors/interface/interface_handlers.c:11482) wm_handler_ui_call (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:688) wm_handlers_do_intern (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3015) wm_handlers_do (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3129) wm_event_do_handlers (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3617) WM_main (/Users/germanocavalcante/blender-git/blender/source/blender/windowmanager/intern/wm.c:639) main (/Users/germanocavalcante/blender-git/blender/source/creator/creator.c:560) start (@start:133) ```

Added subscriber: @deadpin

Added subscriber: @deadpin

It's crashing on a call to BLI_array_alloca which allocates memory on the stack. An incoming mesh has mp->totloop of 98658 which causes 2 significant stack allocations of size 789264 bytes each to occur. So you are probably running out of stack space (as alluded to in the ___chkstk_darwin above).

It's crashing on a call to `BLI_array_alloca` which allocates memory on the stack. An incoming mesh has `mp->totloop` of 98658 which causes 2 significant stack allocations of size 789264 bytes each to occur. So you are probably running out of stack space (as alluded to in the `___chkstk_darwin` above).

This issue was referenced by 6cd977b903

This issue was referenced by 6cd977b903f46ee0f33c4fb2fb1f00e084cb56e9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2022-01-22 20:06:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94760
No description provided.